--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 org.gradle.unsafe.configuration-cache=true
+
+org.gradle.caching=true
